--- a/build.properties
+++ b/build.properties
@@ -19,11 +19,7 @@ papp.out.7z = false
 
 # Official artifacts
 atf.id = android-studio-ide
-atf.win32.filename = ${atf.id}-${app.version}-win32
-atf.win32.ext = .zip
-atf.win32.url = https://dl.google.com/dl/android/studio/ide-zips/3.4.2.0/android-studio-ide-183.5692245-windows32.zip
-atf.win32.assertextract = android-studio/bin/studio.exe
-atf.win64.filename = ${atf.id}-${app.version}-win64
+atf.win64.filename = ${atf.id}-win64
 atf.win64.ext = .zip
 atf.win64.url = https://dl.google.com/dl/android/studio/ide-zips/3.4.2.0/android-studio-ide-183.5692245-windows.zip
 atf.win64.assertextract = android-studio/bin/studio64.exe
