--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ app = android-studio
 app.name = Android Studio
 app.type = archive
 app.version = 3.5
+app.release = 5
 app.homepage = https://developer.android.com/studio
 
 # Portable app
