--- a/build.properties
+++ b/build.properties
@@ -5,8 +5,8 @@ core.dir = ../portapps
 app = android-studio
 app.name = Android Studio
 app.type = archive
-app.version = 3.6.1
-app.release = 10
+app.version = 3.6.2
+app.release = 11
 app.homepage = https://developer.android.com/studio
 
 # Portable app
@@ -22,5 +22,5 @@ papp.out.7z = false
 atf.id = android-studio-ide
 atf.win64.filename = ${atf.id}-win64
 atf.win64.ext = .zip
-atf.win64.url = https://dl.google.com/dl/android/studio/ide-zips/3.6.1.0/android-studio-ide-192.6241897-windows.zip
+atf.win64.url = https://redirector.gvt1.com/edgedl/android/studio/ide-zips/3.6.2.0/android-studio-ide-192.6308749-windows.zip
 atf.win64.assertextract = android-studio/bin/studio64.exe
